<?php

namespace LimeSurvey\Api\Rest\Renderer;

class RestRendererV2 extends RestRendererV1
{
}
