classDiagram

class RestController
RestController --* RestEndpointFactory : composes
RestController --* RestEndpoint : composes
RestController : run() void

class RestEndpointFactory
RestEndpointFactory : create(YiiRequest) RestEndpoint

class RestEndpoint
RestEndpoint --* CommandInterface : composes
RestEndpoint --* RestRendererInterface : composes
RestEndpoint : getResponseRenderer() RestRendererInterface
RestEndpoint : getCommand() CommandInterface
RestEndpoint : runCommand() Response

class CommandInterface
<<interface>> CommandInterface

CommandInterface --* TransformerInterface : composes
CommandInterface : run(Request) Response


class RestRendererInterface
<<interface>> RestRendererInterface
RestRendererInterface : returnResponse(Response) void
RestRendererInterface : returnException(Exception) void

class RestRendererV1
RestRendererInterface <|-- RestRendererV1 : implements
RestRendererV1 : returnResponse(Response) void
RestRendererV1 : returnException(Exception) void

class RestRendererV2
RestRendererInterface <|-- RestRendererV2 : implements
RestRendererV2 : returnResponse(Response) void
RestRendererV2 : returnException(Exception) void

class TransformerInterface
<<interface>> TransformerInterface
TransformerInterface : transform(array) array
TransformerInterface : transformAll(array) array


class Transformer
TransformerInterface <|-- Transformer : implements
Transformer : transform(array) array
Transformer : transformAll(array) array

class TransformerOutputActiveRecord
Transformer --|> TransformerOutputActiveRecord
